2.0/themes/digitallounge/style.css
/* ... */
.arrow-container .spinner {
	display: none;
}

.loading .arrow-container .spinner {
	display: inline-block;
	position: relative;
	top: -4px;
}

.arrow-previous {
	background: url("img/arrow_button_left.svg");
	background-size: cover;
	background-repeat: no-repeat;
  	width: 32px;
  	height: 32px;
  	margin-left: 6px;

}

 .arrow-next {
	background: url("img/arrow_button_right.svg");
	background-size: cover;
	background-repeat: no-repeat;
  	width: 32px;
  	height: 32px;
  	margin-left: 6px;
}

.collection:before {
  content:"";
  background: black;
  position: absolute;
  top: 0;
  right: 25px;
  width: 50%;
  width: 1px;
}


.collection  h1.entry-title {
	text-transform: uppercase;
}


.collection article {
  width: 254px;
  float: left;
  padding: 1px;
  margin-bottom: 10px;
}

.home .inner-container {
	position: relative;
	height: 412px;
	clear: both;
	width: 99999px;
	overflow: hidden;
	transition: .5s ease-in-out left;
}

#colophon {
	background-color:  rgb(213,108,74);
	background-image: url("img/footerbackground.svg");
	background-repeat: no-repeat;
	background-size: cover;
	color: #fff;
	padding: 0px 32px 64px;
	text-align: center;
	width: 100%;
	z-index: 3;
	height: 128px;
	box-shadow: 0px -2.5px 3px -1px rgba(0,0,0,0.4);
	position: relative;
}

.maybe-load-more {
	display: block;
	height: 200px;
	width: 50px;
	float: left;
}

/* Sticky Footer 

@media screen and (min-height:650px) and (min-width:800px) {
	.home #colophon,
	.search #colophon,
	.archive #colophon,
	.page #colophon {
		position: fixed;
		bottom: 0;
	}
	.page.page-template-staff-php #primary,
	.page #primary {
		margin-bottom: 128px;
	}
}
*/

.menu-footer-menu-container {

}



/*--------------------------------------------------------------
# Forms
--------------------------------------------------------------*/
button,
input[type="button"],
input[type="reset"],
input[type="submit"] {
	border: 2px solid;
	border-color: #222;
	border-radius: 3px;
	background: transparent;
	box-shadow: none;
	color: #222;
	font-size: 16px;
	line-height: 1;
	padding: 8px 16px;
}

button:hover,
input[type="button"]:hover,
input[type="reset"]:hover,
input[type="submit"]:hover,
button:focus,
input[type="button"]:focus,
input[type="reset"]:focus,
input[type="submit"]:focus,
button:active,
input[type="button"]:active,
input[type="reset"]:active,
input[type="submit"]:active {
	background: #222;
	color: #fff;
}

input[type="text"],
input[type="email"],
input[type="url"],
input[type="password"],
input[type="search"],
textarea {
	color: #444;
	border: 1px solid #ccc;
	border-radius: 3px;
}

input[type="text"]:focus,
input[type="email"]:focus,
input[type="url"]:focus,
input[type="password"]:focus,
input[type="search"]:focus,
textarea:focus {
	color: #000;
}

input[type="text"],
input[type="email"],
input[type="url"],
input[type="password"],
input[type="search"] {
	padding: 3px;
}

textarea {
	padding-left: 3px;
	width: 100%;
}

/*--------------------------------------------------------------
# Navigation
--------------------------------------------------------------*/

#masthead a {
	text-decoration: none;
}

#navbuttons {
	height: 64px;
	float: right;
  	margin-top: -64px;
}

#navbuttons ul {
	list-style-type: none;
	padding: 4px 0;
	margin: 0px;
	-webkit-margin-before: 0em;
	-webkit-margin-after: 0em;
	-webkit-margin-start: 0px;
	-webkit-margin-end: 0px;
	-webkit-padding-start: 0px;
}

#navbuttons li {
	display: inline-block;
	padding-right: 10px;
	vertical-align: middle;
}

#eventreadout {
	position: relative;
	left: -25px;
	height: 64px;
	line-height: initial;
	font-weight: 200;
	max-width:512px;
	overflow:hidden;
}

#eventreadout .big {
	font-size: 3em;
	font-weight: 900;
}

#eventreadout .small {
	font-variant: small-caps;
	font-weight: 500;
}

#eventreadout .pipe {
	margin: 0px 7px;
}

#eventreadout .eventheadline {
	font-size: 1.5em;
	font-weight: 700;
}

#eventreadout .smalleritalic {
	font-weight: 200;
	font-size: 1em;
	font-style: italic;
}

.chatwithus {
	margin-top: -25px;
	text-transform: uppercase;
	font-weight: 600;
}

.binoculars {

}

.usclogo {

}

.home-search-filter-bar .search-field {
	max-width: 512px;
	width: calc(100% - 50px);
	background: #fff;
	border-color: #ccc;
	margin: 16px;
	border-radius: 0;
	font-size: 20px;
	padding: 4px 8px;
	line-height: 1;
	float: left;
}

.home-search-filter-bar .search-submit {
	width: 36px;
	height: 36px;
	padding: 0;
	margin: 4px 16px 16px 0;
	font-size: 1px;
	line-height: 36px;
	position: absolute;
	top: 12px;
	left: 564px;
	border-radius: 0;
	background: #eee;
	box-shadow: none;
	display: none;
}

.home-search-filter-bar {
	height: 72px;
	margin-bottom: 16px;
	display: none; /* hidden by default */
    position: fixed; /* Sticky by default */
    width: 100%;
}

.home .home-search-filter-bar {
	display: block; /* always visible on home page */
	position: relative; /* Not sticky on home page */
}

.home-search-filter-bar .filter-bar-menu {
	display: block;
	margin: 0 0 0 564px;
	padding: 0;
	height: 70px;
}

.filter-bar-menu > li {
	list-style: none;
	padding: 0;
	margin: 0;
	float: left;
	position: relative;
}

.filter-bar-menu > li > button {
	padding: 20px 24px;
	border-left: 1px solid #eee !important;
	border-radius: 0;
	font-size: 24px;
	line-height: 32px;
	text-transform: uppercase;
	color: #333;
	margin-top: -1px;
}

.filter-bar-menu > li > button:hover,
.filter-bar-menu > li > button:focus,
.filter-bar-menu > li:hover > button {
	background: #c23c47  !important;
	color: #fff;
}

.filter-bar-menu > li > ul {
	display: none;
    position: absolute;
    top: 70px;
    left: 0;
    width: 256px;
    margin: 0;
    background: #fff;
    border: 1px solid #ccc;
    border-top: none;
	z-index: 10;
	list-style: none;
	padding: 4px 16px 0 16px;
}

.filter-bar-menu > li:hover > ul,
.filter-bar-menu > li > button:focus + ul {
	display: block;
}

.filter-bar-menu > li:last-child > button {
	border-right: 1px solid #eee !important;
}
/* ... */

